update of forgot pasword

--- a/Final_Individual_Project.csproj
+++ b/Final_Individual_Project.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Trouble login.Designer.cs">
       <DependentUpon>Trouble login.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserData.cs" />
     <EmbeddedResource Include="ForgotPassword.resx">
       <DependentUpon>ForgotPassword.cs</DependentUpon>
     </EmbeddedResource>
